dts/testData/inspections/requiredProperty/RefNode.dts
/include/ "Declaration.dtsi"

<error descr="Missing required properties: \"phy-handle\"">&lable</error> { };
